<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="kartikey.saran.aisle.Views.Dashboard.ui.discover.DiscoverFragment"
        android:label="@string/discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="kartikey.saran.aisle.Views.Dashboard.ui.notes.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="kartikey.saran.aisle.Views.Dashboard.ui.matches.MatchFragment"
        android:label="@string/matches"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="kartikey.saran.aisle.Views.Dashboard.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>