<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Dashboard.ui.notes.NotesFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleInverse"
                android:indeterminateOnly="true"
                app:layout_constraintTop_toTopOf="@id/recyclerView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="10dp"
                android:id="@+id/tV_notes"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/personal_message_to_you"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tV_notes"
                android:layout_margin="10dp"
                android:id="@+id/tV_personalMsg"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:id="@+id/cL_note"
                app:layout_constraintTop_toBottomOf="@id/tV_personalMsg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="#808080"
                    android:layout_height="344dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/iV_img1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/tV_Tap_review"
                        app:layout_constraintLeft_toLeftOf="@id/tV_Tap_review"
                        android:text=""
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:id="@+id/tV_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tV_Tap_review"
                        android:text="@string/tap_to_view_50_notes"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:layout_margin="20dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/cL_note"
                app:layout_constraintRight_toRightOf="@id/cL_note"
                android:id="@+id/lL_premium"
                android:gravity="center"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/cL_note"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interested_in_you"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/tV_Int"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/premium_members_can_nview_all_their_likes_at_once"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:id="@+id/tV_prem"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/aisle_yellow"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/btn_continue"
                    android:text="@string/upgrade"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lL_premium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="10dp"
                android:id="@+id/recyclerView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>

</layout>